--- a/MobileService45/Web.config
+++ b/MobileService45/Web.config
@@ -7,7 +7,10 @@
   <configSections>
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  <!--<section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />-->
+
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -72,6 +75,11 @@
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <publisherPolicy apply="no" />
+        <assemblyIdentity name="Oracle.ManagedDataAccess" publicKeyToken="89b483f429c47342" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.122.1.0" newVersion="4.122.1.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -87,7 +95,13 @@
       <provider invariantName="Oracle.ManagedDataAccess.Client" type="Oracle.ManagedDataAccess.EntityFramework.EFOracleProviderServices, Oracle.ManagedDataAccess.EntityFramework, Version=6.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="OracleMobileDB" connectionString="DATA SOURCE=10.41.20.41:1521/mobile;PASSWORD=admin@123;USER ID=APP" providerName="Oracle.ManagedDataAccess.Client" /></connectionStrings><system.serviceModel>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="Oracle.ManagedDataAccess.Client" />
+      <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver" type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />
+    </DbProviderFactories>
+  </system.data>
+<connectionStrings><add name="OracleMobileDB" connectionString="DATA SOURCE=(DESCRIPTION =  (ADDRESS = (PROTOCOL = TCP)(HOST = 10.41.20.41)(PORT = 1521))(LOAD_BALANCE = yes) (CONNECT_DATA =  (SERVER = DEDICATED) (SERVICE_NAME = MOBILE)));PASSWORD=admin@123;USER ID=APP" providerName="Oracle.ManagedDataAccess.Client" /></connectionStrings><system.serviceModel>
     <bindings>
       <basicHttpBinding>
         <binding name="SubscriberManagementSoap">
@@ -117,4 +131,11 @@
       <endpoint address="https://alinetest.vnpt.vn/LineTest/services.asmx" binding="customBinding" bindingConfiguration="ServicesSoap12" contract="AlineTest.ServicesSoap" name="ServicesSoap12" />
     </client>
   </system.serviceModel>
+<oracle.manageddataaccess.client>
+<version number="*">
+<dataSources>
+<dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) " />
+</dataSources>
+</version>
+</oracle.manageddataaccess.client>
 </configuration>
