--- a/MobileService45/packages.config
+++ b/MobileService45/packages.config
@@ -26,6 +26,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Oracle.ManagedDataAccess" version="12.2.1100" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="Swashbuckle" version="5.5.3" targetFramework="net45" />
   <package id="Swashbuckle.Core" version="5.5.3" targetFramework="net45" />
