Update DsUpload/ use basic connection

--- a/MobileService45/MobileService45.csproj
+++ b/MobileService45/MobileService45.csproj
@@ -212,11 +212,14 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountMobileController.cs" />
+    <Compile Include="Controllers\DSUpLoadController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="DAL\Datacs.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DSUpLoad.cs" />
     <Compile Include="Models\LOG.cs" />
     <Compile Include="Models\OracleMobileDB.cs" />
     <Compile Include="Models\USER.cs" />
