--- a/MobileService45/Web.config
+++ b/MobileService45/Web.config
@@ -5,11 +5,9 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  <!--<section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />-->
-
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <!--<section name="oracle.manageddataaccess.client" type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />-->
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -101,7 +99,12 @@
       <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver" type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />
     </DbProviderFactories>
   </system.data>
-<connectionStrings><add name="OracleMobileDB" connectionString="DATA SOURCE=(DESCRIPTION =  (ADDRESS = (PROTOCOL = TCP)(HOST = 10.41.20.41)(PORT = 1521))(LOAD_BALANCE = yes) (CONNECT_DATA =  (SERVER = DEDICATED) (SERVICE_NAME = MOBILE)));PASSWORD=admin@123;USER ID=APP" providerName="Oracle.ManagedDataAccess.Client" /></connectionStrings><system.serviceModel>
+  <connectionStrings>
+    <add name="OracleMobileDB" connectionString="DATA SOURCE=(DESCRIPTION =  (ADDRESS = (PROTOCOL = TCP)(HOST = 10.41.20.41)(PORT = 1521))(LOAD_BALANCE = yes) (CONNECT_DATA =  (SERVER = DEDICATED) (SERVICE_NAME = MOBILE)));PASSWORD=admin@123;USER ID=APP" providerName="Oracle.ManagedDataAccess.Client" />
+    <add name="Entities" connectionString="metadata=res://*/Models.Test1.csdl|res://*/Models.Test1.ssdl|res://*/Models.Test1.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=(DESCRIPTION =  (ADDRESS = (PROTOCOL = TCP)(HOST = 10.41.20.41)(PORT = 1521))(LOAD_BALANCE = yes) (CONNECT_DATA =  (SERVER = DEDICATED) (SERVICE_NAME = MOBILE)));PASSWORD=admin@123;USER ID=APP&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities1" connectionString="metadata=res://*/Models.GTTBCSSTHA.csdl|res://*/Models.GTTBCSSTHA.ssdl|res://*/Models.GTTBCSSTHA.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=10.41.20.21:1521/CSSTHA;PASSWORD=abc123;PERSIST SECURITY INFO=True;USER ID=GIAOTIEPTB&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <system.serviceModel>
     <bindings>
       <basicHttpBinding>
         <binding name="SubscriberManagementSoap">
@@ -131,11 +134,23 @@
       <endpoint address="https://alinetest.vnpt.vn/LineTest/services.asmx" binding="customBinding" bindingConfiguration="ServicesSoap12" contract="AlineTest.ServicesSoap" name="ServicesSoap12" />
     </client>
   </system.serviceModel>
-<oracle.manageddataaccess.client>
-<version number="*">
-<dataSources>
-<dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) " />
-</dataSources>
-</version>
-</oracle.manageddataaccess.client>
+  <oracle.manageddataaccess.client>
+    <version number="*">
+      <dataSources>
+        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) " />
+      </dataSources>
+      <implicitRefCursor>
+        <storedProcedure schema="APP" name="DONGBOSL.LIST_TBDC_KH">
+          <refCursor name="RS">
+            <bindInfo mode="Output" />
+          </refCursor>
+        </storedProcedure>
+        <storedProcedure schema="APP" name="DONGBOSL.LIST_YCXN_UPLOAD">
+          <refCursor name="RS">
+            <bindInfo mode="Output" />
+          </refCursor>
+        </storedProcedure>
+      </implicitRefCursor>
+    </version>
+  </oracle.manageddataaccess.client>
 </configuration>
