--- a/MobileService45/Web.config
+++ b/MobileService45/Web.config
@@ -101,8 +101,8 @@
   </system.data>
   <connectionStrings>
     <add name="OracleMobileDB" connectionString="DATA SOURCE=(DESCRIPTION =  (ADDRESS = (PROTOCOL = TCP)(HOST = 10.41.20.41)(PORT = 1521))(LOAD_BALANCE = yes) (CONNECT_DATA =  (SERVER = DEDICATED) (SERVICE_NAME = MOBILE)));PASSWORD=admin@123;USER ID=APP" providerName="Oracle.ManagedDataAccess.Client" />
-    <add name="Entities" connectionString="metadata=res://*/Models.Test1.csdl|res://*/Models.Test1.ssdl|res://*/Models.Test1.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=(DESCRIPTION =  (ADDRESS = (PROTOCOL = TCP)(HOST = 10.41.20.41)(PORT = 1521))(LOAD_BALANCE = yes) (CONNECT_DATA =  (SERVER = DEDICATED) (SERVICE_NAME = MOBILE)));PASSWORD=admin@123;USER ID=APP&quot;" providerName="System.Data.EntityClient" />
-    <add name="Entities1" connectionString="metadata=res://*/Models.GTTBCSSTHA.csdl|res://*/Models.GTTBCSSTHA.ssdl|res://*/Models.GTTBCSSTHA.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=10.41.20.21:1521/CSSTHA;PASSWORD=abc123;PERSIST SECURITY INFO=True;USER ID=GIAOTIEPTB&quot;" providerName="System.Data.EntityClient" />
+    <add name="Mobile" connectionString="metadata=res://*/Models.Test1.csdl|res://*/Models.Test1.ssdl|res://*/Models.Test1.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=(DESCRIPTION =  (ADDRESS = (PROTOCOL = TCP)(HOST = 10.41.20.41)(PORT = 1521))(LOAD_BALANCE = yes) (CONNECT_DATA =  (SERVER = DEDICATED) (SERVICE_NAME = MOBILE)));PASSWORD=admin@123;USER ID=APP&quot;" providerName="System.Data.EntityClient" />
+    <add name="GTTB" connectionString="metadata=res://*/Models.GTTBCSSTHA.csdl|res://*/Models.GTTBCSSTHA.ssdl|res://*/Models.GTTBCSSTHA.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=10.41.20.21:1521/CSSTHA;PASSWORD=abc123;PERSIST SECURITY INFO=True;USER ID=GIAOTIEPTB&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.serviceModel>
     <bindings>
