--- a/MobileService45/MobileService45.csproj
+++ b/MobileService45/MobileService45.csproj
@@ -219,7 +219,9 @@
     <Compile Include="Controllers\DSUpLoadController.cs" />
     <Compile Include="Controllers\EntityFrameworkADVController.cs" />
     <Compile Include="Controllers\FunctionDbController.cs" />
+    <Compile Include="Controllers\FunctionDbVersion1Controller.cs" />
     <Compile Include="Controllers\GiaoTiepController.cs" />
+    <Compile Include="Controllers\GiaoTiepVersion1Controller.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="DAL\Datacs.cs" />
