--- a/MobileService45/Web.config
+++ b/MobileService45/Web.config
@@ -137,7 +137,7 @@
   <oracle.manageddataaccess.client>
     <version number="*">
       <dataSources>
-        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) " />
+        <dataSource alias="UnUsedDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) " />
       </dataSources>
       <implicitRefCursor>
         <storedProcedure schema="APP" name="DONGBOSL.LIST_TBDC_KH">
