--- a/MobileService45/Web.config
+++ b/MobileService45/Web.config
@@ -150,6 +150,11 @@
             <bindInfo mode="Output" />
           </refCursor>
         </storedProcedure>
+        <storedProcedure schema="APP" name="DONGBOSL.XN_UPLOAD">
+          <refCursor name="RS">
+            <bindInfo mode="Output" />
+          </refCursor>
+        </storedProcedure>
       </implicitRefCursor>
     </version>
   </oracle.manageddataaccess.client>
